--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.0.0"
+    "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.0"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
