--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "generate_query",
   "module": "index.ts",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
+  "main": "./index.ts",
+  "bin": {
+    "generate_query": "./index.ts"
   },
   "peerDependencies": {
     "typescript": "^5.5.3"
@@ -11,6 +12,7 @@
   "dependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
+    "commander": "^12.1.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.0"
   },
