feat: commander generate MATCH

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/commander": "^2.12.2",
     "@types/jest": "^29.5.12",
     "commander": "^12.1.0",
     "jest": "^29.7.0",
@@ -18,5 +19,6 @@
   },
   "scripts": {
     "test": "jest"
-  }
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
