--- a/package.json
+++ b/package.json
@@ -1,24 +1,35 @@
 {
   "name": "studio-draw-pattern",
-  "module": "index.ts",
-  "type": "module",
-  "main": "./index.ts",
-  "bin": {
-    "generate_query": "./bin/index.ts"
-  },
-  "peerDependencies": {
-    "typescript": "^5.5.3"
-  },
-  "dependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/commander": "^2.12.2",
-    "@types/jest": "^29.5.12",
-    "commander": "^12.1.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.2.0"
-  },
+  "version": "0.0.1",
+  "description": "Experiment code for GrapeScope",
+  "module": "dist/esm/index.js",
+  "types": "dist/esm/index.d.ts",
   "scripts": {
-    "test": "jest"
+    "dev": "father dev",
+    "build": "father build",
+    "build:deps": "father prebundle",
+    "prepublishOnly": "father doctor && npm run build"
   },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "keywords": [],
+  "authors": [],
+  "license": "MIT",
+  "files": [
+    "dist",
+    "compiled"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "father": "^4.4.5",
+    "typescript": "^5.5.3",
+    "@swc/core": "^1.3.53"
+  },
+  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  }
 }
