--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "authors": [],
   "license": "MIT",
   "files": [
-    "dist",
+    "./dist/esm",
     "compiled"
   ],
   "publishConfig": {
@@ -28,9 +28,11 @@
     "typescript": "^5.5.3"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "dependencies": {
     "valtio": "^1.13.2"
   }
 }
